# catan-rl

./: .gitignore  LICENSE  README.md  requirements.txt  run_simulation.py  value_params_candidate.json
.claude/: launch.json
catan_service/: __init__.py  contracts.py  flask_app.py  replays.py  serialization.py  sessions.py
docs/: OPTIMIZATION_PLAN.md  PERFORMANCE.md  PRESENTATION.md  README.md  architecture.md
engine/: __init__.py  board.py  building.py  dev_cards.py  game.py  resources.py  robber.py  state.py  trading.py
models/: elo-ladder.json  eval_000.ctrp  eval_001.ctrp  eval_002.ctrp  eval_003.ctrp  eval_004.ctrp  eval_005.ctrp  eval_006.ctrp  eval_007.ctrp  eval_008.ctrp  eval_009.ctrp
players/: __init__.py  base.py  strategies.py
rust/: Cargo.toml  README.md  heuristic_v2_candidate.json
rust/catan-env/: Cargo.toml
rust/catan-env/benches/: env.rs
rust/catan-env/examples/: netbench.rs
rust/catan-env/src/: alpha.rs  codec.rs  env.rs  lib.rs  net.rs  obs.rs  search.rs
rust/catan-env/tests/: codec.rs  env.rs  env_bots.rs  env_soak.rs  env_zero_alloc.rs  obs.rs  search.rs
rust/catan-py/: Cargo.toml  pyproject.toml
rust/catan-py/src/: lib.rs  opponent_planner.rs
rust/catan-web/: Cargo.toml
rust/catan-web/src/: dashboard.html  main.rs
simulation/: __init__.py  logger.py  profiler.py  progress.py  replay.py  runner.py  stats.py
tests/: __init__.py  test_board.py  test_building.py  test_catanzero.py  test_counterfactual_policy.py  test_dev_cards.py  test_game.py  test_game_phases.py  test_longest_road.py  test_ppo.py  test_resources.py  (+4 more)
(+854 files in other folders)
