[package]
name = "catan-web"
version = "0.1.0"
edition = "2021"

[dependencies]
catan-core = { path = "../catan-core" }
catan-env = { path = "../catan-env" }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
rand = { version = "0.8", features = ["small_rng"] }
